# dl-project-codebase

./: .env.example  .gitignore  CLAUDE.md  README.md  cavityscoreissue.ipynb  final_s.ipynb  plan.md  pyproject.toml  requirements.txt  sprint_plan.md  test_hdd_data.py  train_moe_kaggle.ipynb
.claude/: settings.local.json
ablations/: ablation_master.csv  paths.kaggle.yaml  table_A_otsu.csv  table_C_cavity_threshold.csv  table_D_routing_variant.csv  table_E_fusion_mode.csv  table_F_routing_temperature.csv
configs/: baseline.yaml  component10_biogpt.yaml  component1_dann.yaml  component2_txv.kaggle.yaml  component2_txv.yaml  component4_lung.yaml  component7_boundary_critic.yaml  component7_critic.yaml  component7_fp_auditor.yaml  moe.yaml  paths.yaml
docs/: component4_finetuning.md
eval-moe/: moe_components.csv  moe_per_image.csv  moe_summary.json  moe_system.csv
eval_baseline/: baseline_components.csv  baseline_per_image.csv  baseline_summary.json  baseline_system.csv
notebooks/: ablation_studies.ipynb  component0_qc.ipynb  component10_biogpt.ipynb  component1_dann.ipynb  component1_dann_training.ipynb  component2_txv.ipynb  component4_lung.ipynb  component7_verification.ipynb  component9_json_output.ipynb  eval_baseline.ipynb  eval_moe.ipynb  eval_moe_v2.ipynb  kaggle_baby_steps_remaining_and_moe.ipynb  kaggle_pipeline_run.ipynb  nb_fix_cache_rebuild.ipynb  qualitative_comparisons.ipynb  run_remaining_training_models.ipynb  sota_comparison.ipynb  sprint3_full_pipeline.ipynb  train_all_fixes.ipynb  train_component2_sprint2.ipynb  train_component4_sprint1.ipynb  (+2 more)
(+212 files in other folders)
