[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tb-cxr-baseline"
version = "0.1.0"
description = "Baseline-first TB chest X-ray pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
pythonpath = ["."]
